# mygene-mcp

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mygene_mcp/: __init__.py  client.py  server.py
src/mygene_mcp/tools/: __init__.py  advanced.py  annotation.py  batch.py  chemical.py  disease.py  export.py  expression.py  go.py  homology.py  interval.py  metadata.py  pathway.py  query.py  variant.py
tests/: conftest.py  test_advanced_tools.py  test_batch_tools.py  test_client.py  test_export_tools.py  test_variant_tools.py
